--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
             <!-- 오른쪽 버튼 영역-->
             <div class="nav-right" id="nav-right">
                 <a href="/member/signUp">회원가입</a>
-                <a href="/auth/loginform.html">로그인</a>
+                <a href="/auth/loginform">로그인</a>
             </div>
         </div>
 
