--- a/src/main/resources/templates/auth/loginForm.html
+++ b/src/main/resources/templates/auth/loginForm.html
@@ -6,6 +6,7 @@
 </head>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
 <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <link rel='stylesheet' href='/css/auth/loginForm.css'>
 <link rel='stylesheet' href='/js/lib/bootstrap-4.4.1/css/bootstrap.min.css'>
@@ -20,13 +21,15 @@
         다양한 장르의 문화를 버스킹버스킹과 함께해보시겠어요?
         </span>
         </div>
-        <form>
+
+        <form id="loginForm" method="post" action="/auth/login">
             <div class="input">
 
                 <div class="form-group">
                     <label for="email">Email address</label>
                     <input type="email" class="form-control" id="email" placeholder="이메일을 입력해주세요">
                 </div>
+
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" placeholder="비밀번호을 입력해주세요">
@@ -59,7 +62,6 @@
         </div>
     </div>
 </div>
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="/js/member/memberForm.js"></script>-->
+<script src="/js/auth/login.js"></script>
 </body>
 </html>
