--- a/src/main/resources/templates/auth/loginForm.html
+++ b/src/main/resources/templates/auth/loginForm.html
@@ -27,12 +27,12 @@
 
                 <div class="form-group">
                     <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="이메일을 입력해주세요">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="이메일을 입력해주세요">
                 </div>
 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="비밀번호을 입력해주세요">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호을 입력해주세요">
                 </div>
             </div>
 
@@ -54,7 +54,7 @@
     </div>
 
     <div class="right-inner">
-        <div class="cover">
+        <div class="cover"> 
             <div class="cover-text">
                 <h1>Busking Busking</h1>
                 <img src="/image/index-image/play-button-white.png">
