--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,12 +15,19 @@
             <a href="/request/form.html">공연요청</a>
             <a href="/grape/list.html">후원하기</a>
             <!-- 오른쪽 버튼 영역-->
-            <div class="nav-right" id="nav-right">
-                <a href="/member/signUp">회원가입</a>
-                <a href="/auth/loginForm">로그인</a>
 
-              
-            </div>
+            <th:block th:if="${loginInfo} == null">
+                <div class="nav-right" id="nav-right">
+                    <a href="/member/signUp">회원가입</a>
+                    <a href="/auth/loginForm">로그인</a>
+                </div>
+            </th:block>
+            <th:block th:unless="${loginInfo} == null">
+                <div class="nav-right" id="nav-right">
+                    <a th:text="${loginInfo.nickName}"></a>
+                    <a href="/member/signUp">로그아웃</a>
+                </div>
+            </th:block>
 
         </div>
 
