--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -46,6 +46,7 @@
                         <div id="nickNameDiv">
                             <label class="icon" for="nickName"><i class="icon-user"></i></label>
                             <input type="text" id="nickName" name="nickName" placeholder="닉네임" required/>
+                            <!--<td class="err" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Name Error</td>-->
                         </div>
 
                         <div id="passwordDiv">
