--- a/src/main/resources/templates/notice/noticeList.html
+++ b/src/main/resources/templates/notice/noticeList.html
@@ -40,19 +40,41 @@
     <div class="float-right">
         <a href='/notice/form' class='btn btn-primary btn-sm'>추가</a>
     </div>
+    
 
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
-            <li class="page-item">
-                <a id="prevBtn" class="page-link" tabindex="-1">이전</a></li>
 
             <li class="page-item">
-                <a id="currBtn" class="page-link" href="#">1</a></li>
+                <a id="prevBtn" class="page-link" tabindex="-1">이전</a>
+            </li>
+
+            <li class="page-item">
+                <a id="currBtn" class="page-link" href="#">1</a>
+            </li>
+
+            <li class="page-item">
+                <a href="#" class="page-link">2</a>
+            </li>
+
+            <li class="page-item">
+                <a href="#" class="page-link">3</a>
+            </li>
+
+            <li class="page-item">
+                <a href="#" class="page-link">4</a>
+            </li>
+
+            <li class="page-item">
+                <a href="#" class="page-link">5</a>
+            </li>
 
             <li class="page-item ">
-                <a id="nextBtn" class="page-link" tabindex="0">다음</a></li>
+                <a id="nextBtn" class="page-link" tabindex="0">다음</a>
+            </li>
         </ul>
     </nav>
+
 </div>
 </body>
 </html>
