--- a/src/main/resources/templates/notice/noticeList.html
+++ b/src/main/resources/templates/notice/noticeList.html
@@ -43,30 +43,15 @@
     
 
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
+        <ul class="pagination justify-content-center" th:with="start=${T(Math).floor(noticeList.number/10)*10 + 1},
+                    last=(${start + 9 < noticeList.totalPages ? start + 9 : noticeList.totalPages})">
 
             <li class="page-item">
                 <a id="prevBtn" class="page-link" tabindex="-1">이전</a>
             </li>
 
-            <li class="page-item">
-                <a id="currBtn" class="page-link" href="#">1</a>
-            </li>
-
-            <li class="page-item">
-                <a href="#" class="page-link">2</a>
-            </li>
-
-            <li class="page-item">
-                <a href="#" class="page-link">3</a>
-            </li>
-
-            <li class="page-item">
-                <a href="#" class="page-link">4</a>
-            </li>
-
-            <li class="page-item">
-                <a href="#" class="page-link">5</a>
+            <li class="page-item" th:each="page: ${#numbers.sequence(start, last)}" th:class="${page == noticeList.number + 1} ? 'active'">
+                <a class="page-link" th:text="${page}" th:href="@{/notice/list(page=${page})}"></a>
             </li>
 
             <li class="page-item ">
