--- a/src/main/resources/templates/notice/noticeList.html
+++ b/src/main/resources/templates/notice/noticeList.html
@@ -30,7 +30,8 @@
             <tr th:each="notice : ${noticeList}">
                 <td th:text="${notice.noticeTitle}"></td>
                 <td><a th:href="@{/notice/view/{noticeId}(noticeId=${notice.id})}" th:text="${notice.noticeContents}"></a></td>
-                <td th:text="${notice.member.nickName}"></td>
+                <td>tempNickName</td>
+<!--                <td th:text="${notice.member.nickName}"></td>-->
                 <td th:text="${notice.viewCnt}"></td>
                 <td th:text="${#temporals.format(notice.regDt,'yyyy-MM-dd')}"></td>
             </tr>
@@ -43,20 +44,36 @@
     
 
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center" th:with="start=${T(Math).floor(noticeList.number/10)*10 + 1},
-                    last=(${start + 9 < noticeList.totalPages ? start + 9 : noticeList.totalPages})">
-
+        <ul class="pagination justify-content-center" th:with="start=${T(Math).floor(noticeList.number/10) * 10 + 1},last=(${start + 9 < noticeList.totalPages ? start + 9 : noticeList.totalPages})" >
             <li class="page-item">
-                <a id="prevBtn" class="page-link" tabindex="-1">이전</a>
+                <a class="page-link" th:href="@{/notice/list(page=1)}" aria-label="First">
+                    <span aria-hidden="true">First</span>
+                </a>
+            </li>
+
+            <li class="page-item" th:class="${noticeList.first} ? 'disabled'">
+                <a class="page-link" th:href="${noticeList.first} ? '#' : @{/notice/list(page=${noticeList.number})}" aria-label="Previous">
+                    <span aria-hidden="true">&lt;</span>
+                </a>
             </li>
 
             <li class="page-item" th:each="page: ${#numbers.sequence(start, last)}" th:class="${page == noticeList.number + 1} ? 'active'">
-                <a class="page-link" th:text="${page}" th:href="@{/notice/list(page=${page})}"></a>
+                <a class="page-link" th:if="${page != null && page != 0 }" th:text="${page}" th:href="@{/notice/list(page=${page})}"></a>
             </li>
 
-            <li class="page-item ">
-                <a id="nextBtn" class="page-link" tabindex="0">다음</a>
+            <li class="page-item" th:class="${noticeList.last} ? 'disabled'">
+                <a class="page-link" th:href="${noticeList.last} ? '#' : @{/notice/list(page=${noticeList.number + 2})}" aria-label="Next">
+                    <span aria-hidden="true">&gt;</span>
+                </a>
             </li>
+
+            <li class="page-item">
+                <a class="page-link" th:href="@{/notice/list(page=${noticeList.totalPages})}" aria-label="Last">
+                    <span aria-hidden="true">Last</span>
+                </a>
+            </li>
+
+
         </ul>
     </nav>
 
