--- a/src/main/resources/templates/notice/noticeForm.html
+++ b/src/main/resources/templates/notice/noticeForm.html
@@ -13,7 +13,7 @@
 
 <div class='container'>
     <h3>공지등록</h3>
-    <form id="addForm" method="post" action="/notice/insert">
+    <form id="addForm" method="post" action="/notice/insert" enctype="multipart/form-data">
         <div class='form-group row'>
             <label for='noticeTitle' class='col-sm-2 col-form-label'>공지제목</label>
             <div class='col-sm-10'>
