--- a/src/main/resources/templates/notice/noticeView.html
+++ b/src/main/resources/templates/notice/noticeView.html
@@ -21,21 +21,21 @@
         <div class='form-group row'>
             <label for='noticeTitle' class='col-sm-2 col-form-label'>공지제목</label>
             <div class='col-sm-10'>
-                <input class='form-control' id='noticeTitle' type='text' name='noticeTitle' th:value="${notice.noticeTitle}">
+                <input class='form-control' readonly="readonly" id='noticeTitle' type='text' name='noticeTitle' th:value="${notice.noticeTitle}">
             </div>
         </div>
 
         <div class='form-group row'>
             <label for='noticeDescription' class='col-sm-2 col-form-label'>공지내용</label>
             <div class='col-sm-10'>
-                <input class='form-control' id='noticeDescription' type='text' name='noticeDescription' th:value="${notice.noticeContents}">
+                <input class='form-control' readonly="readonly" id='noticeDescription' type='text' name='noticeDescription' th:value="${notice.noticeContents}">
             </div>
         </div>
 
         <div class='form-group row'>
             <label for='noticeDate' class='col-sm-2 col-form-label'>등록일</label>
             <div class='col-sm-10'>
-                <input class='form-control' readonly="readonly" id='noticeDate' type='date' name='noticeDate' th:value="${#temporals.format(notice.regDt,'yyyy-MM-dd')}">
+                <input class='form-control' readonly="readonly" id='noticeDate' type='date' name='noticeDate' th:value="${#temporals.format(notice.getCreatedDate(),'yyyy-MM-dd')}">
             </div>
         </div>
 
@@ -46,20 +46,14 @@
             </div>
         </div>
 
-        <!-- <div class='form-group row'>
-        <label for='noticeDate' class='col-sm-2 col-form-label'>공지날짜</label>
-        <div class='col-sm-10'>
-        <input class='form-control' id='date' type='date' name='noticeDate'>
-        </div>
-        </div>  -->
-
-        <div class='form-group row'>
-            <div class='col-sm-10'>
-<!--                <button id="addBtn" type="button" class='btn btn-primary btn-sm my-new'>추가</button>-->
+        <div class='float-right'>
+            <div>
                 <button id="updateBtn" type="button" class='btn btn-primary btn-sm my-view'>변경</button>
-                <button id="deleteBtn" type="button" class='btn btn-primary btn-sm my-view'>삭제</button>
+                <button id="deleteBtn" type="button" class='btn btn-danger btn-sm my-view'>삭제</button>
+                <button id="listBtn" type="button" class='btn btn-success btn-sm my-new'>목록</button>
             </div>
         </div>
+
     </form>
 
     <footer>
