20201012 performance ui 수정 진행

--- a/src/main/resources/templates/performance/performanceForm.html
+++ b/src/main/resources/templates/performance/performanceForm.html
@@ -8,7 +8,7 @@
     <style>
 
         .map_wrap, .map_wrap * {
-            margin: 0;
+            margin: 3px;
             padding: 0;
             font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;
             font-size: 12px;
@@ -35,7 +35,8 @@
             top: 0;
             left: 0;
             bottom: 0;
-            width: 230px;
+            width: 610px;
+            hight: 80px;
             margin: 10px 0 30px 10px;
             padding: 5px;
             overflow-y: auto;
@@ -102,7 +103,7 @@
             <div class='form-group'>
                 <label for='entryDate'>공연날짜</label>
                 <input class='form-control' readonly id='entryDate' type='text' name='entryDate'>
-                <a href='#entryDate'><img class='addon' src='../map-image/cal.png' width='50px' height='50px'></a>
+                <a href='#entryDate'><img class='addon' src='/image/performance/calendar.png' width='50px' height='50px'></a>
             </div>
 
             <div class='form-group'>
